--- a/src/main/resources/view/OrderDetailsForm.fxml
+++ b/src/main/resources/view/OrderDetailsForm.fxml
@@ -12,43 +12,45 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="orderDetailsPane" prefHeight="619.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderDetailsFormController">
-    <children>
-        <Label alignment="CENTER" prefHeight="67.0" prefWidth="804.0" style="-fx-background-color: #1a237e;" text="OrderDetails" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="32.0" />
-            </font>
-        </Label>
-        <Separator layoutX="13.0" layoutY="573.0" prefHeight="8.0" prefWidth="777.0" style="-fx-background-color: #d9e3f0;" />
-        <JFXTreeTableView fx:id="tblDetails" layoutX="21.0" layoutY="353.0" prefHeight="211.0" prefWidth="762.0">
-            <columns>
-                <TreeTableColumn fx:id="colItemCode" prefWidth="151.99996376037598" text="Item Code" />
-                <TreeTableColumn fx:id="colDesc" prefWidth="253.60003662109375" text="Description" />
-                <TreeTableColumn fx:id="colQty" prefWidth="167.20004272460938" text="QTY" />
-                <TreeTableColumn fx:id="colAmount" prefWidth="190.4000244140625" text="Amount" />
-            </columns>
-        </JFXTreeTableView>
-        <Text layoutX="271.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Copyright © 2023 - iCET All Rights Reserved" wrappingWidth="239.73681640625" />
-        <JFXTextField fx:id="txtSearch" layoutX="600.0" layoutY="92.0" prefHeight="26.0" prefWidth="182.0" promptText="Order ID" />
-        <JFXTreeTableView fx:id="tblOrder" layoutX="21.0" layoutY="127.0" prefHeight="211.0" prefWidth="762.0">
-            <columns>
-                <TreeTableColumn fx:id="colOrderId" prefWidth="170.39998817443848" text="Order ID" />
-                <TreeTableColumn fx:id="colDate" prefWidth="184.79998779296875" text="Date" />
-                <TreeTableColumn fx:id="colCustName" prefWidth="245.60006713867188" text="Customer Name" />
-                <TreeTableColumn fx:id="colOption" prefWidth="159.99997558593748" text="Option" />
-            </columns>
-        </JFXTreeTableView>
-        <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="14.0" layoutY="73.0" onAction="#backButtonOnAction" prefHeight="37.0" prefWidth="44.0" textFill="WHITE">
-            <font>
-                <Font name="System Bold" size="14.0" />
-            </font>
-            <graphic>
-                <ImageView fitHeight="27.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../img/back.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </JFXButton>
-    </children>
+<AnchorPane fx:id="orderDetailsPane" prefHeight="619.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OrderDetailsFormController">
+    <Label alignment="CENTER" prefHeight="67.0" prefWidth="804.0" style="-fx-background-color: #1a237e;"
+           text="OrderDetails" textFill="WHITE">
+        <font>
+            <Font name="System Bold" size="32.0"/>
+        </font>
+    </Label>
+    <Separator layoutX="13.0" layoutY="573.0" prefHeight="8.0" prefWidth="777.0"
+               style="-fx-background-color: #d9e3f0;"/>
+    <JFXTreeTableView fx:id="tblDetails" layoutX="21.0" layoutY="353.0" prefHeight="211.0" prefWidth="762.0">
+        <columns>
+            <TreeTableColumn fx:id="colItemCode" prefWidth="151.99996376037598" text="Item Code"/>
+            <TreeTableColumn fx:id="colDesc" prefWidth="253.60003662109375" text="Description"/>
+            <TreeTableColumn fx:id="colQty" prefWidth="167.20004272460938" text="QTY"/>
+            <TreeTableColumn fx:id="colAmount" prefWidth="190.4000244140625" text="Amount"/>
+        </columns>
+    </JFXTreeTableView>
+    <Text layoutX="271.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0"
+          text="Copyright © 2023 - iCET All Rights Reserved" wrappingWidth="239.73681640625"/>
+    <JFXTextField fx:id="txtSearch" layoutX="600.0" layoutY="92.0" prefHeight="26.0" prefWidth="182.0"
+                  promptText="Order ID"/>
+    <JFXTreeTableView fx:id="tblOrder" layoutX="21.0" layoutY="127.0" prefHeight="211.0" prefWidth="762.0">
+        <columns>
+            <TreeTableColumn fx:id="colOrderId" prefWidth="170.39998817443848" text="Order ID"/>
+            <TreeTableColumn fx:id="colDate" prefWidth="184.79998779296875" text="Date"/>
+            <TreeTableColumn fx:id="colCustName" prefWidth="245.60006713867188" text="Customer Name"/>
+            <TreeTableColumn fx:id="colOption" prefWidth="159.99997558593748" text="Option"/>
+        </columns>
+    </JFXTreeTableView>
+    <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="14.0" layoutY="73.0" onAction="#backButtonOnAction"
+               prefHeight="37.0" prefWidth="44.0" textFill="WHITE">
+        <font>
+            <Font name="System Bold" size="14.0"/>
+        </font>
+        <graphic>
+            <ImageView fitHeight="27.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true">
+                <Image url="@../img/back.png"/>
+            </ImageView>
+        </graphic>
+    </JFXButton>
 </AnchorPane>
