Took away all warnings in fxml files and.

--- a/src/main/resources/view/OrderDetailsForm.fxml
+++ b/src/main/resources/view/OrderDetailsForm.fxml
@@ -33,7 +33,7 @@
     <Text layoutX="271.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0"
           text="Copyright © 2023 - iCET All Rights Reserved" wrappingWidth="239.73681640625"/>
     <JFXTextField fx:id="txtSearch" layoutX="600.0" layoutY="92.0" prefHeight="26.0" prefWidth="182.0"
-                  promptText="Order ID"/>
+                  promptText="Order ID or Customer Name"/>
     <JFXTreeTableView fx:id="tblOrder" layoutX="21.0" layoutY="127.0" prefHeight="211.0" prefWidth="762.0">
         <columns>
             <TreeTableColumn fx:id="colOrderId" prefWidth="170.39998817443848" text="Order ID"/>
